# RealWorld-DataCollector-Framework

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.docker.txt  run_agent.sh
bridge/: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
bridge/.github/: PULL_REQUEST_TEMPLATE.md
bridge/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
bridge/.github/workflows/: docs.yml
bridge/configs/: base.yaml  direct_eval_base.yaml  grip_adapter.yaml  groot_cyclevla_move.yaml  groot_demo.yaml  groot_demo_overfit.yaml  groot_demo_wrist.yaml  groot_fullft.yaml  groot_general.yaml  groot_goal_9d_r128.yaml  groot_goal_template_r128.yaml  groot_grip.yaml  groot_grip_dir.yaml  groot_hf_template.yaml  groot_libero_e2e.yaml  groot_libero_move.yaml  groot_libero_raw.yaml  groot_long_9d_r128.yaml  groot_long_template_r128.yaml  groot_move.yaml  groot_move_dir.yaml  groot_single_task.yaml  groot_so101.yaml  groot_so101_6d.yaml  groot_so101_6d_10hz.yaml  groot_so101_6d_15hz.yaml  groot_so101_6d_c50.yaml  groot_so101_joint.yaml  groot_so101_joint6d_aug_10hz.yaml  groot_so101_wrist.yaml  groot_so101_wrist_aug_10hz.yaml  groot_spatial_9d_r128.yaml  groot_spatial_template_r128.yaml  hdf5_groot_grip.yaml  hdf5_groot_move.yaml  lora_adapter.yaml  move_adapter.yaml  multitask_groot_9d.yaml  multitask_groot_9d_r128.yaml  multitask_groot_e2e.yaml  (+28 more)
bridge/configs/models/: groot.yaml  openvla.yaml  pi05.yaml  smolvla.yaml
bridge/multitask_training_package/: SETUP.md  ds_config.json  eval_robocasa.py  requirements.txt  train_lora.py
bridge/multitask_training_package/configs/: base.yaml  grip_adapter.yaml  hdf5_groot.yaml  hdf5_openvla.yaml  hdf5_pi05.yaml  hdf5_smolvla.yaml  lora_adapter.yaml  move_adapter.yaml  multitask_groot.yaml  multitask_openvla.yaml  multitask_pi05.yaml  multitask_smolvla.yaml
bridge/outputs_pkg/eval/: eval_results.json
bridge/scripts/eval/: debug_pipeline.py  eval_robocasa.py  eval_so101.py  eval_vla_libero.py  eval_vla_robocasa.py  pave_robocasa_client.py  test_full_pipeline.py  test_pipeline_video.py  test_pipeline_visual.py  test_robocasa_backend.py  test_robocasa_gt.py  test_robocasa_pickup.py  test_robocasa_simple.py  verify_fixture_targets.py
bridge/scripts/preprocess/: preprocess_direction.py  preprocess_libero.py  preprocess_libero_9d.py  preprocess_libero_9d_hdf5.py  preprocess_so101.py  preprocess_so101_joint.py
bridge/scripts/so101/: so101_client.py  so101_planner.py  so101_server.py  so101_task_config.json
bridge/scripts/train/: configs  train_lora_movegrip.py
bridge/src/robobridge/: __init__.py
collector/: .gitignore  DOCKER_INTEGRATION_CHECKLIST.md  README.md  check_cameras.py  environment.yaml  execution_forward_and_reset.py  pyproject.toml  requirements.txt  run_calibration.sh  run_check_cameras.sh  run_code_gen_with_judge.py  run_detect.py  run_forward_and_reset.sh  run_record_robot_state.sh  unified_multi_arm.py
collector/assets/urdf/: so101_robot2.urdf  so101_robot3.urdf
collector/cameras/: __init__.py  camera_config.py  multi_camera.py  opencv_camera.py  realsense_camera.py
collector/code_gen_lerobot/: __init__.py  code_gen_with_skill.py  execution_context.py  llm.py
collector/code_gen_lerobot/forward_execution/: __init__.py  code_gen.py  dspy_prompt.py  skill_api_doc.py  system_prompt.py  task_oriented_perception.md  turn0_prompt.py  turn1_prompt.py  turn2_prompt.py  turn_test_prompt.py  user_prompt.py  workspace.py
collector/code_gen_lerobot/llm_utils/: gemini.py  llama.py  openai_utils.py
collector/code_gen_lerobot/multi_arm/: __init__.py  multi_skill_api_doc.py
collector/code_gen_lerobot/prompt/: reset_code_gen.py  skill_detect_object_prompt.py  spec_gen.py
collector/code_gen_lerobot/reset_execution/: __init__.py  code_gen.py  prompt.py  turn0_prompt.py  workspace.py
collector/docs/: pipeline_architecture.html
collector/gravity_sag_calibration/: calibrate.py
collector/joint_compensation_calibration/: calibrate.py
collector/judge/: __init__.py  image_capture.py  visualize.py  vlm.py
collector/judge/forward_execution/: __init__.py  forward_prompting_docs.md  judge.py  prompt.py
collector/judge/reset_execution/: __init__.py  judge.py  prompt.py  reset_prompting_docs.md
collector/object_detection/: main.py  requirements.txt
collector/object_detection/camera/: __init__.py  realsense.py
collector/object_detection/config/: config.yaml
collector/object_detection/detection/: __init__.py  grounding_detector.py
collector/object_detection/localization/: __init__.py  coordinate_transform.py
collector/object_detection/test/: test_grounding_dino.py
collector/pipeline/: __init__.py  base_pipeline.py  camera_session.py  save_logs.py  task_runner.py
collector/pipeline_config/: free_api_config.yaml  paid_api_config.yaml  parse_yaml.py  recording_config.yaml
collector/pix2robot_calibrator/: __init__.py  calibrator.py  run_calibration.py
collector/record_dataset/: __init__.py  async_camera.py  callback.py  cleanup.py  config.py  context.py  multi_arm_recorder.py  record_dataset.md  recorder.py  skills_wrapper.py  utils.py  visualize_skills.py
collector/record_dataset/postprocess/: __init__.py  skill_labeler.py
collector/robot_configs/free_state/: robot0_free_state.json  robot2_free_state.json  robot3_free_state.json
collector/robot_configs/initial_state/: robot0_initial_state.json  robot2_initial_state.json  (+1 more)
collector/scripts/: add_lerobot_v3_tag.py  camera_fps_monitor.py  record_robot_state.py  run_lerobot_train.sh  train_cap_policy.py  verify_dataset.py
collector/server_inference/: __init__.py  docker-compose.yml  run_codegen_server.py  run_judge_server.py
collector/skills/: About_skills.md  dry_run_skills.py  insert.py  move_approach_position.py  move_linear.py  move_to_position_with_pitch.py  multi_arm_skills.py  press.py  pull.py  push_object.py  rotate_wrist.py  shake.py  skills.py  skills_lerobot.py  stir.py  strike.py  test_new_skills.py  wipe.py
collector/verification/: __init__.py  prompt.py  verify_code.py
(+137 files in other folders)
