[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robobridge"
version = "0.1.0"
description = "RoboBridge - General Robot Manipulation Framework with LangChain integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "RoboBridge Team" }
]
keywords = ["robotics", "manipulation", "langchain", "ros2", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    # LangChain core
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    # LLM/VLM providers
    "langchain-openai",
    "langchain-anthropic",
    "langchain-google-genai",
    "langchain-ollama",
    "langchain-huggingface",
    # VLA training & inference
    "transformers>=4.40",
    "torch>=2.0",
    "peft>=0.10",
    "bitsandbytes>=0.43",
    "accelerate>=0.30",
    "datasets>=2.19",
    # Utilities
    "PyYAML>=6.0",
    "h5py>=3.10",
    "numpy",
    "Pillow",
]

[project.optional-dependencies]
langchain = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
]
openai = [
    "langchain-openai",
]
anthropic = [
    "langchain-anthropic",
]
google = [
    "langchain-google-genai",
]
ollama = [
    "langchain-ollama",
]
huggingface = [
    "langchain-huggingface",
    "transformers",
    "torch",
]
ros2 = [
    # ROS2 dependencies installed via rosdep
]
vla = [
    "transformers>=4.40",
    "torch>=2.0",
    "peft>=0.10",
    "bitsandbytes>=0.43",
    "accelerate>=0.30",
    "datasets>=2.19",
    "PyYAML>=6.0",
    "h5py>=3.10",
]
vla-lerobot = [
    "robobridge[vla]",
    "lerobot",
]
full = [
    "robobridge[langchain,openai,anthropic,google,ollama,huggingface,vla]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
robobridge = "robobridge.cli.main:main"

[project.urls]
Homepage = "https://github.com/robobridge/robobridge"
Documentation = "https://github.com/robobridge/robobridge#readme"
Repository = "https://github.com/robobridge/robobridge"

[tool.hatch.build.targets.wheel]
packages = ["src/robobridge"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/examples",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
